fixed textOverlay align and text colors

--- a/src/main/resources/edu/wpi/punchy_pegasi/frontend/css/InfoPage.css
+++ b/src/main/resources/edu/wpi/punchy_pegasi/frontend/css/InfoPage.css
@@ -39,7 +39,6 @@
 }
 
 .info-about-team-member-name{
-    -fx-alignment: bottom;
     -fx-text-alignment: left;
     -fx-font-family: "Nunito Sans Bold";
     -fx-font-size: 18;
@@ -47,9 +46,8 @@
 }
 
 .info-about-team-member-position{
-    -fx-alignment: bottom;
     -fx-text-alignment: left;
     -fx-font-family: "Nunito Sans Bold";
     -fx-font-size: 12;
-    -fx-text-fill: #0067B1;
+    -fx-text-fill: #B5ECFF;
 }
